fixed control window visibility problem

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
         font-family: verdana, helvetica, sans-serif;
         font-size: 12px;
         padding: 12px;
+        visibility: visible;
     }
     body.controls .instructions {
         text-align: right;
